--- a/VO.html
+++ b/VO.html
@@ -3,103 +3,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Военное обозрение</title>
     <style>
-        body {
+        .container {
             display: grid;
-            grid-template-areas: "header" "nav" "article" "footer";
-            grid-template-rows: 50px 50px 1fr 80px;
-            grid-template-columns: 1fr;
-            grid-row-gap: 10px;
-            grid-column-gap: 10px;
-            height: 100vh;
-            margin: 0;
+            grid-template-columns: repeat(12, 1fr);
+            grid-template-rows: 50px 350px 50px;
         }
-
-        @media all and (max-width: 575px) {
-            body {
-                grid-template-areas: "header" "nav" "article" "footer";
-                grid-template-rows: 80px 1fr 70px 1fr 70px;
-                grid-template-columns: 1fr;
-            }
+        header {
+            grid-column: span 12;
+            display: flex;
         }
-
-        header, footer, article, div {
-            padding: 1.2em;
-            background: indianred;
+        nav {
+            grid-column: span 2;
         }
-
-        #pageHeader {
-            grid-area: header;
+        main {
+            grid-column: span 10;
         }
-
-
-        #pageFooter {
-            grid-area: footer;
+        footer {
+            grid-column: span 12;
         }
-
-        #mainArticle {
-            grid-area: article;
-        }
-
-        #inner-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            grid-gap: 5px;
-        }
-
-
-        #inner-grid > div {
-            background: darkred;
-            padding: 8px;
+        header > div:nth-child(3) {
+            margin-left: auto;
         }
     </style>
 </head>
-<body>
-<header id="pageHeader">Шапка</div>
 
-</header>
-<article id="mainArticle">Контент
-    <div id="grid">
-        <div>При сравнении спутниковых снимков, старых, сделанных год назад, и новых от июня этого года, четко видно,
-            как на взлетно-посадочной полосе, где ранее самолеты были размещены без укрытия, появились ангары. Они
-            должны укрыть авиапарк российских ВКС в Сирии от обстрелов. Сооружения можно заметить в левой части
-            фотографии.
-        </div>
-        <div>При сравнении спутниковых снимков, старых, сделанных год назад, и новых от июня этого года, четко видно,
-            как на взлетно-посадочной полосе, где ранее самолеты были размещены без укрытия, появились ангары. Они
-            должны укрыть авиапарк российских ВКС в Сирии от обстрелов. Сооружения можно заметить в левой части
-            фотографии.
-        </div>
-        <div>При сравнении спутниковых снимков, старых, сделанных год назад, и новых от июня этого года, четко видно,
-            как на взлетно-посадочной полосе, где ранее самолеты были размещены без укрытия, появились ангары. Они
-            должны укрыть авиапарк российских ВКС в Сирии от обстрелов. Сооружения можно заметить в левой части
-            фотографии.
-        </div>
-        <div>При сравнении спутниковых снимков, старых, сделанных год назад, и новых от июня этого года, четко видно,
-            как на взлетно-посадочной полосе, где ранее самолеты были размещены без укрытия, появились ангары. Они
-            должны укрыть авиапарк российских ВКС в Сирии от обстрелов. Сооружения можно заметить в левой части
-            фотографии.
-        </div>
-        <div id="inner-grid">
-            <div>В 1965 г. США и Северный Вьетнам стали уже полноценными участниками конфликта, гражданская война на
-                территории Южного Вьетнама превратилась в настоящую войну США и южновьетнамской армии против местных
-                партизан и Северного Вьетнама.
-            </div>
-            <div>К 1968 году численность боевых соединений США их союзников во Вьетнаме достигла 540 000 человек (в их
-                числе были также австралийские, новозеландские и южнокорейские соединения). Численность только
-                сухопутных войск Южного Вьетнама в этом году составляла 370 000 человек. Им противостояли около 160 000
-                бойцов регулярных войск Вьетконга (это максимальное число – на пике могущества Вьетконга), которых
-                поддерживали до 300 000 повстанцев, входивших в Народные и Региональные силы.
-            </div>
-            <div>Авиабаза Хмеймим является основным аэродромом для группировки российских ВКС в Сирии. В январе 2019
-                года официальные Москва и Дамаск подписали соглашение, которое закрепляет права аренды этой
-                инфраструктурной единицы за Россией на ближайшие 49 лет.
-            </div>
-            <div>Одним из основных направлений строительных работ на базе является безопасность. В первую очередь, это
-                связано с не прекращающимися атаками боевиков на базу. Использование террористами БПЛА и минометов
-                подвергают серьезной опасности людей и технику, размещенные на территории Хмеймим.
-            </div>
-        </div>
-    </div>
-</article>
-<footer id="pageFooter">Подвал</footer>
+<body>
+<div class="container">
+    <header>
+        <div>Home</div>
+        <div>Search</div>
+        <div>Logout</div>
+    </header>
+    <nav>MENU</nav>
+    <main>CONTENT</main>
+    <footer>FOOTER</footer>
+</div>
 </body>
+
